gcc/testsuite/g++.dg/parse/qualified5.C
// PR c++/84820

struct A {};

template<int> struct B : A
{
  B()
  {
    A(&A::foo);			// { dg-error "foo" }
  }
};

B<0> b;
